--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    
+    <style>
+      body {background-image: url("layered-waves-haikei.svg");
+      background-color: #cccccc;}
+    </style>
   </body>
 </html>
