optimized sidebar scaling with window and added plus icon

--- a/School/project1/index.html
+++ b/School/project1/index.html
@@ -9,6 +9,7 @@
     <body>
         <div>
             <div id="sidebar">
+                <button onclick="alert('you pressed')" id="plus_button"><img src="plus_icon.svg" alt="add a board" id="plus_img"></button>
             </div>
             <div id="content">
             </div>
